# cursesdraw

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CursorHandle.cpp  CursorHandle.h  CursorLimits.cpp  CursorLimits.h  KeyboardInput.cpp  KeyboardInput.h  PropertiesTypes.h  UserInterface.cpp  UserInterface.h  main.cpp
src/TextUI/: TextUI.cpp  TextUI.h
