cmake_minimum_required(VERSION 3.22)
project(CursesDraw VERSION 1.0.0 LANGUAGES CXX)

set (CMAKE_CXX_STANDARD 14)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (PREFIX /usr)
include(GNUInstallDirs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})

option(ENABLE_PDCURSES 0)
option(ENABLE_SDL 0)
option(ENABLE_TEST 0)

if(CMAKE_VERSION VERSION_LESS "3.7.0")
 set (CMAKE_INCLUDE_CURRENT_DIR ON)
endif()

if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
   set(ENABLE_PDCURSES 1)
   set(ENABLE_SDL 0)
endif()

if(ENABLE_PDCURSES)
    message(STATUS "Building with pdcurses")
    find_library(CURSES pdcurses)
    if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
      set(ENABLE_SDL 1)
    endif()
  else()
    message(STATUS "Building with ncurses")
    add_compile_definitions(_NCURSES_)
    find_library(CURSES ncurses)
endif()

if(ENABLE_SDL)
  find_package(SDL)
  add_compile_definitions(_SDL_)
endif()

if(ENABLE_TEST)
  add_compile_definitions(_TEST_)
endif()

add_subdirectory(src/)
